--- a/Takeaway/.classpath
+++ b/Takeaway/.classpath
@@ -14,5 +14,21 @@
 	<classpathentry kind="lib" path="C:/Selenium/selenium-java-3.7.1/libs/httpclient-4.5.3.jar"/>
 	<classpathentry kind="lib" path="C:/Selenium/selenium-java-3.7.1/libs/httpcore-4.4.6.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/extentreports-3.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/bson-3.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/httpcore-4.4.4.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/httpmime-4.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/jcommander-1.48.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/jsoup-1.9.2.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/mongodb-driver-3.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/mongodb-driver-core-3.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/extentreports-java-3.1.1/extentreports-java-3.1.1/lib/testng-6.9.10.jar"/>
+	<classpathentry kind="lib" path="C:/Selenium/MetaModel-full-5.0.0-packaged/MetaModel-5.0.0/MetaModel-csv-5.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
